Search query is working, display a list of restaurants in Paris
Wikimapi API key is now loaded from /sdcard/wikimapia_api_key

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="View categories"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="Restaurants in Paris" />
+
+    <TextView
+        android:id="@+id/restaurant_results"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
