--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,26 +12,26 @@
     android:orientation="vertical"
     tools:context="com.github.spyhunter99.wikimapia_client.MainActivity">
 
-    <Button
-        android:id="@+id/load_categories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Load categories"/>
-
-    <Button
-        android:id="@+id/view_categories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View categories"/>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="Restaurants in Paris" />
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="Search Wikimapia around Paris, FR:" />
+
+    <EditText
+        android:id="@+id/search_query"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:inputType="text"
+        android:maxLines="1"
+        android:imeOptions="actionSearch">
+        <requestFocus />
+    </EditText>
 
     <TextView
-        android:id="@+id/restaurant_results"
+        android:id="@+id/results"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"/>
 </LinearLayout>
